tests/negative/neg_own_anon_reassign_join.safe
-- Test: neg_own_anon_reassign_join
-- Description: Allocators are removed in PR11.8e.
-- Expected: REJECT parser_error

package anonymous_reassign_join_test

   type data is record
      value : integer

   function build returns data
      return new ((value = 1) as data)
